--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,73 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  min-height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  gap: 2vw;
+  flex-wrap: wrap;
+  background-color: #3b3b3b;
+  padding: 1vh 1vw;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.dataCard {
+  border-radius: 0.5em;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  padding: 1em;
+  flex-wrap: wrap;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.expense {
+  width: 100%;
+  min-height: 20rem;
+  background-color: #626262;
+  display: flex;
+  justify-content: space-around;
+  gap: 1vw;
+  padding: 5rem;
+}
+.expense > div {
+  width: 30%;
+  background-color: #9b9b9b;
+  height: 10rem;
+  border-radius: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.recent {
+  width: 100%;
+  min-height: 20rem;
+  background-color: white;
 }
 
-.card {
-  padding: 2em;
+.top {
+  width: 100%;
+  height: 20rem;
+  background-color: #fff;
 }
 
-.read-the-docs {
-  color: #888;
+.first {
+  margin-bottom: 1rem;
+}
+
+.second {
+  display: flex;
+  gap: 2vw;
+}
+
+.second > div:first-child {
+  width: 80%;
+}
+
+.second > div:last-child {
+  width: 80%;
+}
+
+h2 {
+  color: white;
+  margin-bottom: 1rem;
+  margin-left: 1vw;
+}
+
+.expense > .chart {
+  background-color: transparent;
 }
